Acceptance changes part 1

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -129,6 +129,16 @@ a {
             content : "Learn More";
         }
     }
+    &.free-trial {
+        width: 275px;
+        background : @admin-green;
+        &:hover {
+            background : darken(@admin-green, 10%);
+        }
+        &:before {
+            content : "Start 14 Day Free Trial";
+        }
+    }
     &.small-cta {
         width: 275px;
     }
@@ -751,7 +761,7 @@ a {
       padding: 25px 0;
     }
     &.section-global {
-      padding: 100px 0 60px;
+      padding: 100px 0 80px;
     }
     &.section-features {
       padding: 15px 0;
