--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,4 @@
+<% include start %>
 <section class="section grey section-xlarge">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
@@ -19,3 +20,4 @@
 		</header>
 	</div>
 </section>
+<% include end %>
