--- a/views/blog/building-a-start-up-take-two.ejs
+++ b/views/blog/building-a-start-up-take-two.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <div class="text-center">
 	<img src="/images/blog/take-2.png">
 </div>
@@ -24,3 +25,4 @@
 <div class="text-center small-margin-top">
 	<iframe frameborder="0" height="315" width="560" src="http://www.youtube.com/embed/pPA787QTxp8"></iframe>
 </div>
+<% include blogEnd %>
