--- a/views/blog/create-items-from-roadmap-views.ejs
+++ b/views/blog/create-items-from-roadmap-views.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <h2>Create Items from Roadmap Views</h2>
 <p>It can be cumbersome to create items only from the Table View. Now users can create items on the Timeline or Swimlane View and drag them onto their roadmap. </p>
 <div class="text-center">
@@ -20,3 +21,4 @@
 <div class="text-center">
 	<img src="/images/blog/remove-headers.png">
 </div>
+<% include blogEnd %>
