--- a/views/blog/productivity-tools-for-product-managers.ejs
+++ b/views/blog/productivity-tools-for-product-managers.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <div class="text-center">
 	<img src="/images/blog/productivity.png">
 </div>
@@ -18,3 +19,4 @@
 <p>I get some of my best ideas in the shower. Coincidentally, I forget everything by the time I make breakfast. This solves that problem for a very low cost.</p>
 <p>Notables go to Gmail, Dropbox and Lastpass. They’re the more common tools that people use on a day to day basis. </p>
 <p>If I had to choose only one tool on this list, it would be Streak. Its imperative to track the status of progress and minimize the small distractions that can eat away at your day.</p>
+<% include blogEnd %>
