--- a/views/blog/publish-and-share-your-roadmap.ejs
+++ b/views/blog/publish-and-share-your-roadmap.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <h2>Publish and Share your Roadmap</h2>
 <p>Have you ever wanted to share your roadmap privately with your team or clients? Now you can! Users can publish and share their roadmap via URL through the export menu.</p>
 <div class="text-center">
@@ -8,3 +9,4 @@
 <div class="text-center">
 	<img src="/images/blog/fiscal-year-end.png">
 </div>
+<% include blogEnd %>
