--- a/views/blog/roadmunk-launch.ejs
+++ b/views/blog/roadmunk-launch.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <p>Roadmunk is officially <strong>launching</strong> on August 31, 2014!</p>
 <p>Thank you to the hundreds that reached out and provided critical feedback on the development and design of our platform. We couldn’t have done it without you.</p>
 
@@ -5,3 +6,4 @@
 <div class="text-center">
 	<img src="/images/blog/roadmunk-launch.png" width="450" height="450">
 </div>
+<% include blogEnd %>
