--- a/views/company.ejs
+++ b/views/company.ejs
@@ -1,3 +1,4 @@
+<% include start %>
 <div class="company">
 	<section class="section blue section-xlarge">
 		<div class="background-media"></div>
@@ -12,7 +13,7 @@
 	<article>
 		<section class="section white section-short has-top">
 			<div class="decor-top">
-				<% include top-triangle-angle %>
+				<% include ./partials/top-triangle-angle %>
 			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -99,3 +100,4 @@
 		</section>
 	</article>
 </div>
+<% include end %>
