--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
+<% include start %>
 <div class="home">
 	<section class="section blue section-xlarge">
 		<div class="background-media"></div>
@@ -25,9 +26,6 @@
 	</section>
 	<article>
 		<section class="section white section-short has-top">
-			<!--<div class="decor-top">
-				<% include top-triangle-angle %>
-			</div>-->
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -202,7 +200,7 @@
 		</section>
 		<!--<section class="section white section-short has-top">
 			<div class="decor-top">
-				<% include top-triangle-angle %>
+				<% include ./partials/top-triangle-angle %>
 			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -306,3 +304,4 @@
 		</section>
 	</article>
 </div>
+<% include end %>
