--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a title="E.T. Go Home" class="navbar-brand" href="/">
-        <img src="/images/logo_white.png" height="35px">
+        <img src="/images/logo_white_beta.png" height="35px">
       </a>
     </div>
 
@@ -24,9 +24,11 @@
   </div><!-- /.container-fluid -->
 
   <div class="small-header-links">
-    <span class="sign-in">
-      <a title="Sign In" href="https://app.roadmunk.com/login/#/">Sign In</a>
-    </span>
+    <a title="Login" href="https://app.roadmunk.com/login/#/">
+      <span class="login">
+        Login
+      </span>
+    </a>
     <span class="help">
       <a title="Help" href="https://roadmunk.zendesk.com/hc/en-us">Help</a>
     </span>
