--- a/views/partials/pricing-table.ejs
+++ b/views/partials/pricing-table.ejs
@@ -333,7 +333,7 @@
 <div class="row">
 	<div class="col-md-8 small-margin-top">
 		<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-			<div class="cta small-cta pricing-cta right"></div>
+			<div class="cta free-trial pricing-cta right"></div>
 		</a>
 	</div>
 	<div class="col-md-4 asterisk">
