--- a/views/style-guide.ejs
+++ b/views/style-guide.ejs
@@ -1,3 +1,4 @@
+<% include start %>
 <div class="wrapper">
   <header>
     <a href="/">
@@ -189,3 +190,4 @@
     <p><small>Contributors include the whole Roadmunk family!</small></p>
   </footer>
 </div>
+<% include end %>
