--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -1,17 +1,19 @@
+<% include start %>
 <article>
-	<% include global-header %>
+	<% include ./partials/global-header %>
 	<section class="section white section-normal has-top">
 		<div class="decor-top">
-			<% include top-triangle-angle %>
+			<% include ./partials/top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<% include terms %>
+					<% include ./partials/terms %>
 				</div>
 			</div>
 		</div>
 	</section>
 </article>
+<% include end %>
