--- a/views/blog/new-timeline-layout-subheaders-tagging.ejs
+++ b/views/blog/new-timeline-layout-subheaders-tagging.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <strong>Our latest release includes:</strong>
 <ul>
 	<li>A new <strong>condensed</strong> timeline view to visualize more items on the roadmap</li>
@@ -7,3 +8,4 @@
 <div class="text-center">
 	<img src="/images/blog/new-timeline.png">
 </div>
+<% include blogEnd %>
