--- a/views/blog/roadmunks-item-dialogue-box.ejs
+++ b/views/blog/roadmunks-item-dialogue-box.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <h2>Item Dialog Box</h2>
 <p>Viewing and editing information should be quick. With our new Item Dialogue Box you can the edit item label, dates and custom properties without going back to the table view. Simple? We think so too.</p>
 <div class="text-center">
@@ -13,3 +14,4 @@
 <div class="text-center">
 	<img src="/images/blog/mass-schedule.png">
 </div>
+<% include blogEnd %>
