--- a/views/blog/sort-and-prioritize-the-table-view.ejs
+++ b/views/blog/sort-and-prioritize-the-table-view.ejs
@@ -1,3 +1,4 @@
+<% include blogStart %>
 <h2>Sorting Table View</h2>
 <p>Click a column header to sort. It's too easy.</p>
 <div class="text-center">
@@ -13,3 +14,4 @@
 <div class="text-center">
 	<img src="/images/blog/adjustable-dates.png">
 </div>
+<% include blogEnd %>
