--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,3 +1,4 @@
+<% include start %>
 <div class="features-page">
 	<article>
 		<section class="section blue section-features has-top">
@@ -161,3 +162,4 @@
 		</section>
 	</article>
 </div>
+<% include end %>
