--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -1,19 +1,21 @@
+<% include start %>
 <div class="privacy">
 	<article>
-		<% include global-header %>
+		<% include ./partials/global-header %>
 		<section class="section white section-normal has-top">
 			<div class="decor-top">
-				<% include top-triangle-angle %>
+				<% include ./partials/top-triangle-angle %>
 			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<% include privacy %>
+						<% include ./partials/privacy %>
 					</div>
 				</div>
 			</div>
 		</section>
 	</article>
 </div>
+<% include end %>
