--- a/views/security.ejs
+++ b/views/security.ejs
@@ -1,9 +1,10 @@
+<% include start %>
 <div class="security">
 	<article>
-		<% include global-header %>
+		<% include ./partials/global-header %>
 		<section class="section white section-normal has-top security-content">
 			<div class="decor-top">
-				<% include top-triangle-angle %>
+				<% include ./partials/top-triangle-angle %>
 			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -41,3 +42,4 @@
 		</section>
 	</article>
 </div>
+<% include end %>
