Minor Latif changes

--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -203,17 +203,18 @@
       }
     }
     .login {
-      border: 1px solid @light-font;
-      padding: 1px 7px 3px 10px;
+      border      : 1px solid @light-font;
+      padding     : 1px 7px 3px 7px;
+      margin-left : 12px;
       .transition(all @scroll-transition);
       .border-radius(2px);
       &:hover {
-        .transition(all @scroll-transition);
         border-color: darken(@light-font, 10%);
+        .transition(all @scroll-transition);
       }
     }
     .help {
-      margin-left: 12px;
+      //start writing here
     }
   }
 }
