--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,7 +74,7 @@
 				<div class="row">
 					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
 						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-							<div class="cta center"></div>
+							<div class="cta free-trial center"></div>
 						</a>
 					</div>
 				</div>
