Analytics tracking changes

--- a/views/partials/global-header.ejs
+++ b/views/partials/global-header.ejs
@@ -16,7 +16,7 @@
 					<% if (content == "pricing") { %>
 						<div class="cta free-trial global-header-cta"></div>
 					<% } else { %>
-						<div class="cta global-header-cta"></div>
+						<div class="cta general global-header-cta"></div>
 					<% } %>
 				</a>
 			</div>
