--- a/views/partials/meta.ejs
+++ b/views/partials/meta.ejs
@@ -18,4 +18,10 @@
 <meta property="og:url" content=" http://roadmunk.com/" />
 <meta property="og:image" content=" http://example.com/image.jpg" /> <!-- Fill in image here -->
 <meta property="og:description" content="<%= description %>" /> 
-<meta property="og:site_name" content="Roadmunk" /> 
+<meta property="og:site_name" content="Roadmunk" />
+
+<!-- Google Webmaster Tools Site Verification -->
+<meta name="google-site-verification" content="nzLNaEA5MdfrWobfulEXwk5ITa91r0vLbv310WIWw8w" />
+
+<!-- Bing and Yahoo Webmaster Tools Site Verification -->
+<meta name="msvalidate.01" content="265FEA508A77F04EA22701FB2AC5A915" />
