--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-lg-12 small-margin-top small-margin-bottom">
 					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-						<div class="cta center"></div>
+						<div id="landing-button" class="cta general center"></div>
 					</a>
 				</div>
 			</div>
@@ -296,7 +296,7 @@
 				<div class="row">
 					<div class="col-lg-12 xsmall-margin-top">
 						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-							<div class="cta center"></div>
+							<div class="cta general center"></div>
 						</a>
 					</div>
 				</div>
