--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -89,5 +89,20 @@
 	  ga('send', 'event', 'button', 'click', 'landing-button');
 	});
 </script>
-
 <!-- End of Google Analytics Script -->
+
+<!-- Basic KISS Metrics Script -->
+ <script type="text/javascript">var _kmq = _kmq || [];
+	var _kmk = _kmk || '97a80da014dd5a88e3e92914a8342e28828ff3ef';
+	function _kms(u){
+	  setTimeout(function(){
+	    var d = document, f = d.getElementsByTagName('script')[0],
+	    s = d.createElement('script');
+	    s.type = 'text/javascript'; s.async = true; s.src = u;
+	    f.parentNode.insertBefore(s, f);
+	  }, 1);
+	}
+	_kms('//i.kissmetrics.com/i.js');
+	_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+</script>
+<!-- End of KISS Metrics Script -->
