Commit to check fix on style guide

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -714,6 +714,14 @@ a {
       padding: 110px 0 50px;
     }
   }
+
+  .underline {
+    &.underline-404 {
+      &:before {
+        bottom: 80px;
+      }
+    }
+  }
 }
 
 @media (max-width: 1000px) {
@@ -767,7 +775,7 @@ a {
       padding: 15px 0;
     }
     &.section-xlarge {
-      padding: 90px 0 30px;
+      padding: 100px 0 30px;
     }
   }
   .zopim {
