Added SEO Markup

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
 		<header class="section-header text-center underline underline-404">
 			<h1 class="headline text-large hairline">Page Not Found</h1>
 			<div class="text-center">
-				<img src="/images/404.png">
+				<img src="/images/404.png" alt="Roadmunk's product roadmap software not found">
 			</div>
 			<p>The page you requested could not be found</p>
 			<div class="col-lg-12 medium-margin-bottom medium-margin-top">
