--- a/views/blog/blogStart.ejs
+++ b/views/blog/blogStart.ejs
@@ -2,6 +2,7 @@
 <html itemscope itemtype="http://schema.org/Blog" lang="en">
 	<head>
 		<% include ../partials/meta %>
+		<% include ../partials/extra-blog-meta %>
 		<% include ../partials/stylesheets %>
 	</head>
 
