--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -69,7 +69,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="https://plus.google.com/b/107625452876036263182/+Roadmunkgoogleplus/" title="Facebook">
+					<a href="https://plus.google.com/+Roadmunkgoogleplus/" title="Google Plus">
 						Google&#43;
 					</a>
 				</li>
