--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -1,5 +1,5 @@
 <% include start %>
-<article>
+<article itemscope itemtype="https://schema.org/PaymentChargeSpecification">
 	<% include ./partials/global-header %>
 	<section class="section white section-normal has-top">
 		<div class="decor-top">
