--- a/views/start.ejs
+++ b/views/start.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Product" lang="en">
+<html itemscope itemtype="http://schema.org/SoftwareApplication" lang="en">
 	<head>
 		<% include ./partials/meta %>
 		<% include ./partials/stylesheets %>
