Style guide fixes

--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -31,8 +31,8 @@
 	<% } %>
 	
 <% } else { %>
-	<script src="/vendor/zeroclipboard/ZeroClipboard.min.js"></script>
-	<script src="/javascripts/init-zc.js"></script>
+	<script type="text/javascript" src="/vendor/zeroClipboard/ZeroClipboard.min.js"></script>
+	<script type="text/javascript" src="/javascripts/init-zc.js"></script>
 <% } %>
 
 <!--Start of Zopim Live Chat Script-->
