--- a/views/company.ejs
+++ b/views/company.ejs
@@ -22,11 +22,11 @@
 						<div class="row">
 							<div class="col-md-5">
 								<h3>Why We're Here...</h3>
-								<p>Roadmunk was built out of the founders frustration to create well designed roadmaps quickly for our stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
+								<p>Roadmunk was built out of the founder's frustration to create well-designed roadmaps quickly for stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
 							</div>
 							<div class="col-md-7 col-md-push-1">
 								<h3>Our Philosophy</h3>
-								<p>Over time we’ve learned that organizations build roadmaps of all shapes and sizes. Roadmaps can be created for sprint planning, projects, release planning, entire product life cycles and much more. Therefore, product roadmapping is not a one size fits all exercise and our goal became clear: to enable the creation of beautiful and insightful roadmaps quickly.</p>
+								<p>Over time we’ve learned that organizations build roadmaps of all shapes and sizes. Roadmaps can be created for sprint planning, projects, release planning, entire product life cycles and much more. Product roadmapping is not a one-size-fits-all exercise. Our goal is to enable the creation of beautiful, insightful and quick-to-build roadmaps.</p>
 							</div>
 						</div>
 					</div>
