--- a/views/features.ejs
+++ b/views/features.ejs
@@ -21,7 +21,7 @@
 				</div>
 				<div class="row small-margin-top">
 					<div class="col-md-5 center text-center subheader">
-						<h4 class="normal">Create your roadmap in just a few minutes. Using our drag and drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
+						<h4 class="normal">Create your roadmap in just a few minutes. Using our drag-and-drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
 					</div>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 						<div id="feature_1_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Color Palettes and Branding</h1>
-								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
+								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap, providing the deepest impact to your audience.</p>
 							</header>
 						</div>
 						<div id="feature_1_img" class="col-md-6 features-right features-text-right">
@@ -53,8 +53,8 @@
 					<div class="col-md-10 center">
 						<div id="feature_2_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
-								<h1 class="headline text-small hairline">Fit To Powerpoint</h1>
-								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation ready format (PPT, PNG, PDF, HTML).</p>
+								<h1 class="headline text-small hairline">Fit To PowerPoint</h1>
+								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation-ready format (PPT, PNG, PDF, HTML).</p>
 							</header>
 						</div>
 						<div id="feature_2_img" class="col-md-6 features-text-left">
@@ -73,7 +73,7 @@
 						<div id="feature_3_text" class="col-md-5">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Share your Roadmap as a URL</h1>
-								<p class="body-subheader features">Let your audience get the latest status and details by interacting with an HTML version of the roadmap view published as a private URL.</p>
+								<p class="body-subheader features">Your audience can view the latest roadmap status and details by interacting with an HTML version of the roadmap, published as a private URL.</p>
 							</header>
 						</div>
 						<div id="feature_3_img" class="col-md-6 features-right features-text-right">
@@ -92,7 +92,7 @@
 						<div id="feature_4_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
-								<p class="body-subheader features">We understand that audiences like sales, engineering and executives need different degrees of granularity and information. By creating additional views, showcase the content thats relevant for a specific audience, all from the same data set. </p>
+								<p class="body-subheader features">Different audiences require different degrees of granularity. By creating additional roadmap views, you can showcase the content relevant for a specific audience, all from the same data set. </p>
 							</header>
 						</div>
 						<div id="feature_4_img" class="col-md-6 features-text-left">
@@ -130,7 +130,7 @@
 						<div id="feature_6_text" class="col-md-5 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
-								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
+								<p class="body-subheader features">Let us help you prepare for those important roadmap meetings with printer-friendly versions of your roadmap. </p>
 							</header>
 						</div>
 						<div id="feature_6_img" class="col-md-6 features-text-left">
