--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
 								<img class="home-svg" src="/images/pencils.svg" width="165" height="165">
 								<div class="row">
 									<div class="col-md-10 center">
-										<h3 class="text-center font-normal text-get-smaller">Color And Style To Match Your Brand</h3>
+										<h3 class="text-center font-normal text-get-smaller">Color And style to match your brand</h3>
 									</div>
 								</div>
 							</li>
@@ -66,7 +66,7 @@
 								</span>-->
 								<div class="row">
 									<div class="col-md-12 center">
-										<h3 class="text-center font-normal text-get-smaller">Download Your Presentation Ready Roadmap</h3>
+										<h3 class="text-center font-normal text-get-smaller">Download your presentation-ready roadmap</h3>
 									</div>
 								</div>
 							</li>
@@ -171,7 +171,7 @@
 								<img src="/images/microscope.svg" width="225" height="225">
 								<h3 class="text-center font-normal">Custom Roadmap Views</h3>
 								<div class="col-sm-10 center">
-									<p class="callout">Single click creation and powerful drag and drop tools.</p>
+									<p class="callout">Single-click creation and powerful drag-and-drop tools.</p>
 								</div>
 							</li>
 							<li class="col-md-3 small-margin-top">
@@ -183,9 +183,9 @@
 							</li>
 							<li class="col-md-3 small-margin-top">
 								<img src="/images/bullet.svg" width="225" height="225">
-								<h3 class="text-center font-normal">Fit to Powerpoint</h3>
+								<h3 class="text-center font-normal">Fit to PowerPoint</h3>
 								<div class="col-sm-10 center">
-									<p class="callout">Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
+									<p class="callout">Stop moving pixels around on a slide. Export directly to PowerPoint.</p>
 								</div>
 							</li>
 						</ul>
