--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -36,7 +36,7 @@
 						<div class="cost">
 							<p>&#36;
 								<span id="starterPrice" class="price"></span>
-								<span class="subheader1">a user per month</span>
+								<span class="subheader1">per user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
 						</div>
@@ -52,7 +52,7 @@
 						<div class="cost">
 							<p>&#36;
 								<span id="businessPrice" class="price"></span>
-								<span class="subheader1">a user per month</span>
+								<span class="subheader1">per user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
 						</div>
@@ -68,7 +68,7 @@
 						<div class="cost">
 							<p>&#36;
 								<span id="professionalPrice" class="price"></span>
-								<span class="subheader1">a user per month</span>
+								<span class="subheader1">per user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
 						</div>
