Hide pricing page link in header and footer for A/B testing

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,11 +23,11 @@
 		<div class="column">
 			<h4>Resources</h4>
 			<ol>
-				<li class="nav-item">
+				<!--<li class="nav-item">
 					<a href="/pricing" title="Pricing">
 						Pricing
 					</a>
-				</li>
+				</li>-->
 				<li class="nav-item">
 					<a href="https://roadmunk.zendesk.com/hc/en-us" title="FAQ">
 						FAQ
@@ -37,6 +37,9 @@
 					<a href="/terms-and-conditions" title="Terms And Conditions">
 						Terms and Conditions
 					</a>
+				</li>
+				<li class="nav-item">
+					&nbsp;
 				</li>
 			</ol>
 		</div>
