--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a id="features" title="Features" href="/features">Features</a></li>
-        <li><a title="Pricing" href="/pricing">Pricing</a></li>
+        <!--<li><a title="Pricing" href="/pricing">Pricing</a></li>-->
         <li><a title="Blog" href="/blog">Blog</a></li>
         <li><a title="Company" href="/company">Company</a></li>
       </ul>
