Updated Text for Released features

--- a/views/partials/pricing-table.ejs
+++ b/views/partials/pricing-table.ejs
@@ -180,7 +180,7 @@
 			</tr>
 
 			<tr>
-				<th>Print to A4, Legal, &#38; Letter&#42;</th>
+				<th>Print to A4, Legal, &#38; Letter</th>
 				<td>
 					<span class="pricing-x glyphicon glyphicon-remove"></span>
 				</td>
@@ -227,7 +227,7 @@
 				</td>
 			</tr>
 			<tr>
-				<th>Fit to Powerpoint&#42;</th>
+				<th>Fit to Powerpoint</th>
 				<td>
 					<span class="pricing-x glyphicon glyphicon-remove"></span>
 				</td>
